--- a/style.css
+++ b/style.css
@@ -1429,3 +1429,30 @@ body {
     font-size: 13px;
     opacity: 0.8;
 }
+
+/* TENGAH */
+.footer-center {
+    flex: 1;
+    text-align: center;
+}
+
+.footer-mpasport {
+    display: block;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+/* ICON STORE */
+.store-icons {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+
+.store-icons img {
+    height: 45px;
+    width: auto;
+    display: block;
+}
