--- a/style.css
+++ b/style.css
@@ -844,29 +844,16 @@ ol li {
     margin: 8px auto 15px;   /* TETAP TENGAH */
 }
 
-.hero-images {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-    flex-wrap: wrap;
-}
-
-.hero-images img {
-    width: 45%;
-    max-width: 420px;
+.hero-image {
+    width: 100%;
+    max-width: 1100px;
     height: auto;
+    display: block;
+    margin: 20px auto;
     border-radius: 16px;
     box-shadow: 0 6px 16px rgba(0,0,0,0.25);
-    object-fit: cover;
 }
 
-@media (max-width: 768px) {
-    .hero-images img {
-        width: 100%;
-        max-width: 100%;
-    }
-}
 
 
 .full-image {
